--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html><!--  This site was created in Webflow. https://webflow.com  --><!--  Last Published: Sat Sep 21 2024 17:17:41 GMT+0000 (Coordinated Universal Time)  -->
+<!DOCTYPE html><!--  This site was created in Webflow. https://webflow.com  --><!--  Last Published: Sat Sep 21 2024 17:28:25 GMT+0000 (Coordinated Universal Time)  -->
 <html data-wf-page="66eec62f2fa59c2dc1325447" data-wf-site="66eec62f2fa59c2dc13253bb" lang="en">
 <head>
   <meta charset="utf-8">
@@ -203,7 +203,7 @@ margin: 0rem !important;
     </div>
     <div data-collapse="medium" data-animation="default" data-duration="400" data-easing="ease-out" data-easing2="ease-in" role="banner" class="nav-primary_component w-nav">
       <div class="nav-primary_container">
-        <a href="https://www.finsweet.com/" target="_blank" class="nav-primary_logo-link w-nav-brand"><img src="images/Screenshot-2024-09-21-at-18.21.37_1.webp" loading="lazy" sizes="(max-width: 479px) 91vw, 434.75px" srcset="images/Screenshot-2024-09-21-at-18.21.37_1Screenshot-2024-09-21-at-18.21.37.webp 500w, images/Screenshot-2024-09-21-at-18.21.37_1Screenshot-2024-09-21-at-18.21.37.webp 800w, images/Screenshot-2024-09-21-at-18.21.37_1.webp 913w" alt="" class="nav-primary_logo"></a>
+        <a href="https://www.finsweet.com/" target="_blank" class="nav-primary_logo-link w-nav-brand"><img src="images/Screenshot-2024-09-21-at-18.21.37.jpg" loading="lazy" sizes="(max-width: 479px) 91vw, 434.75px" srcset="images/Screenshot-2024-09-21-at-18.21.37.jpg 500w, images/Screenshot-2024-09-21-at-18.21.37.jpg 800w, images/Screenshot-2024-09-21-at-18.21.37.jpg 913w" alt="" class="nav-primary_logo"></a>
         <nav role="navigation" class="nav-primary_menu hide w-nav-menu">
           <div data-hover="false" data-delay="0" class="nav-primary_dropdown w-dropdown">
             <div class="nav-primary_dropdown_toggle hide w-dropdown-toggle">
@@ -259,7 +259,7 @@ margin: 0rem !important;
           <div class="container-large">
             <div class="padding-section-large">
               <div class="layout3_component">
-                <div class="layout3_image-wrapper"><img src="images/Screenshot-2024-09-21-at-18.41.18_1.webp" loading="lazy" sizes="(max-width: 479px) 92vw, (max-width: 767px) 95vw, 44vw" srcset="images/Screenshot-2024-09-21-at-18.41.18_1Screenshot-2024-09-21-at-18.41.18.webp 500w, images/Screenshot-2024-09-21-at-18.41.18_1Screenshot-2024-09-21-at-18.41.18.webp 800w, images/Screenshot-2024-09-21-at-18.41.18_1.webp 809w" alt="" class="layout3_image"></div>
+                <div class="layout3_image-wrapper"><img src="images/att.hPfS1rlh1ZFdpWpVJ4Sq2IWHc9pcnu0qt75lqn7F4hg-1.jpg" loading="lazy" sizes="(max-width: 479px) 92vw, (max-width: 767px) 95vw, (max-width: 991px) 44vw, 45vw" srcset="images/att.hPfS1rlh1ZFdpWpVJ4Sq2IWHc9pcnu0qt75lqn7F4hg-1.jpg 500w, images/att.hPfS1rlh1ZFdpWpVJ4Sq2IWHc9pcnu0qt75lqn7F4hg-1.jpg 800w, images/att.hPfS1rlh1ZFdpWpVJ4Sq2IWHc9pcnu0qt75lqn7F4hg-1.jpg 1080w, images/att.hPfS1rlh1ZFdpWpVJ4Sq2IWHc9pcnu0qt75lqn7F4hg-1.jpg 1179w" alt="" class="layout3_image"></div>
                 <div class="layout3_content">
                   <h2 class="heading">KUN/U - KIDS</h2>
                   <div class="padding-bottom padding-small"></div>
@@ -277,7 +277,7 @@ margin: 0rem !important;
           <div class="container-large">
             <div class="padding-section-large">
               <div class="layout3_component">
-                <div class="layout3_image-wrapper"><img src="images/Screenshot-2024-09-21-at-18.45.23_1.webp" loading="lazy" sizes="(max-width: 479px) 92vw, (max-width: 767px) 95vw, 44vw" srcset="images/Screenshot-2024-09-21-at-18.45.23_1Screenshot-2024-09-21-at-18.45.23.webp 500w, images/Screenshot-2024-09-21-at-18.45.23_1Screenshot-2024-09-21-at-18.45.23.webp 800w, images/Screenshot-2024-09-21-at-18.45.23_1.webp 855w" alt="" class="layout3_image"></div>
+                <div class="layout3_image-wrapper"><img src="images/Screenshot-2024-09-21-at-18.45.23.jpg" loading="lazy" sizes="(max-width: 479px) 92vw, (max-width: 767px) 95vw, (max-width: 991px) 44vw, 45vw" srcset="images/Screenshot-2024-09-21-at-18.45.23.jpg 500w, images/Screenshot-2024-09-21-at-18.45.23.jpg 800w, images/Screenshot-2024-09-21-at-18.45.23.jpg 855w" alt="" class="layout3_image"></div>
                 <div class="layout3_content">
                   <h2>KUN/U - JUNIOR</h2>
                   <div class="padding-bottom padding-small"></div>
@@ -295,7 +295,7 @@ margin: 0rem !important;
           <div class="container-large">
             <div class="padding-section-large">
               <div class="layout3_component">
-                <div class="layout3_image-wrapper"><img src="images/att.WvEQdpXDvLOr4m1E_cVduVGTWVpieRgtXVGgqUnq7Vk.jpg" loading="lazy" sizes="(max-width: 479px) 92vw, (max-width: 767px) 95vw, 44vw" srcset="images/att.WvEQdpXDvLOr4m1E_cVduVGTWVpieRgtXVGgqUnq7Vk.jpg 500w, images/att.WvEQdpXDvLOr4m1E_cVduVGTWVpieRgtXVGgqUnq7Vk.jpg 800w, images/att.WvEQdpXDvLOr4m1E_cVduVGTWVpieRgtXVGgqUnq7Vk.jpg 1080w, images/att.WvEQdpXDvLOr4m1E_cVduVGTWVpieRgtXVGgqUnq7Vk.jpg 1600w, images/att.WvEQdpXDvLOr4m1E_cVduVGTWVpieRgtXVGgqUnq7Vk.jpg 2048w" alt="" class="layout3_image"></div>
+                <div class="layout3_image-wrapper"><img src="images/att.WvEQdpXDvLOr4m1E_cVduVGTWVpieRgtXVGgqUnq7Vk.jpg" loading="lazy" sizes="(max-width: 479px) 92vw, (max-width: 767px) 95vw, (max-width: 991px) 44vw, 45vw" srcset="images/att.WvEQdpXDvLOr4m1E_cVduVGTWVpieRgtXVGgqUnq7Vk-p-500.jpg 500w, images/att.WvEQdpXDvLOr4m1E_cVduVGTWVpieRgtXVGgqUnq7Vk-p-800.jpg 800w, images/att.WvEQdpXDvLOr4m1E_cVduVGTWVpieRgtXVGgqUnq7Vk-p-1080.jpg 1080w, images/att.WvEQdpXDvLOr4m1E_cVduVGTWVpieRgtXVGgqUnq7Vk-p-1600.jpg 1600w, images/att.WvEQdpXDvLOr4m1E_cVduVGTWVpieRgtXVGgqUnq7Vk.jpg 2048w" alt="" class="layout3_image"></div>
                 <div class="layout3_content">
                   <h2>KUN/U - OPEN</h2>
                   <div class="padding-bottom padding-small"></div>
@@ -317,17 +317,17 @@ margin: 0rem !important;
               <div class="team4_component">
                 <div class="team4_list">
                   <div class="team4_item">
-                    <div class="team4_image-wrapper"><img src="images/Screenshot-2024-09-21-at-18.33.20_1.webp" loading="lazy" sizes="(max-width: 479px) 92vw, (max-width: 767px) 46vw, (max-width: 991px) 44vw, 21vw" srcset="images/Screenshot-2024-09-21-at-18.33.20_1Screenshot-2024-09-21-at-18.33.20.webp 500w, images/Screenshot-2024-09-21-at-18.33.20_1Screenshot-2024-09-21-at-18.33.20.webp 800w, images/Screenshot-2024-09-21-at-18.33.20_1.webp 922w" alt="" class="team4_image"></div>
+                    <div class="team4_image-wrapper"><img src="images/Screenshot-2024-09-21-at-18.33.20.jpg" loading="lazy" sizes="(max-width: 479px) 92vw, (max-width: 767px) 46vw, (max-width: 991px) 44vw, 21vw" srcset="images/Screenshot-2024-09-21-at-18.33.20.jpg 500w, images/Screenshot-2024-09-21-at-18.33.20.jpg 800w, images/Screenshot-2024-09-21-at-18.33.20.jpg 922w" alt="" class="team4_image"></div>
                     <div class="text-size-medium text-weight-bold">Eglė Ukanytė</div>
                     <div class="text-size-medium">Studijos Vadovė, Choreografė ir Mokytoja</div>
                   </div>
                   <div id="w-node-_41268abb-cf82-c19f-2fd1-2b651b2e5e60-c1325447" class="team4_item">
-                    <div class="team4_image-wrapper"><img src="images/Screenshot-2024-09-21-at-19.03.59_1.webp" loading="lazy" sizes="(max-width: 479px) 92vw, (max-width: 767px) 46vw, (max-width: 991px) 44vw, 21vw" srcset="images/Screenshot-2024-09-21-at-19.03.59_1Screenshot-2024-09-21-at-19.03.59.webp 500w, images/Screenshot-2024-09-21-at-19.03.59_1.webp 660w" alt="" class="team4_image"></div>
+                    <div class="team4_image-wrapper"><img src="images/Screenshot-2024-09-21-at-20.27.50.jpg" loading="lazy" sizes="(max-width: 479px) 92vw, (max-width: 767px) 46vw, (max-width: 991px) 44vw, 21vw" srcset="images/Screenshot-2024-09-21-at-20.27.50.jpg 500w, images/Screenshot-2024-09-21-at-20.27.50.jpg 658w" alt="" class="team4_image"></div>
                     <div class="text-size-medium text-weight-bold">Eglė Kraujalė</div>
                     <div class="text-size-medium">Šokio Judesio Praktika</div>
                   </div>
                   <div id="w-node-_98b64e2b-59bc-2655-73cc-f23305f7c3fb-c1325447" class="team4_item">
-                    <div class="team4_image-wrapper"><img src="images/Screenshot-2024-09-21-at-18.59.42_1.webp" loading="lazy" sizes="(max-width: 479px) 92vw, (max-width: 767px) 46vw, (max-width: 991px) 44vw, 21vw" srcset="images/Screenshot-2024-09-21-at-18.59.42_1Screenshot-2024-09-21-at-18.59.42.webp 500w, images/Screenshot-2024-09-21-at-18.59.42_1.webp 591w" alt="" class="team4_image"></div>
+                    <div class="team4_image-wrapper"><img src="images/Screenshot-2024-09-21-at-18.59.42.jpg" loading="lazy" sizes="(max-width: 479px) 92vw, (max-width: 767px) 46vw, (max-width: 991px) 44vw, 21vw" srcset="images/Screenshot-2024-09-21-at-18.59.42.jpg 500w, images/Screenshot-2024-09-21-at-18.59.42.jpg 591w" alt="" class="team4_image"></div>
                     <div class="text-size-medium text-weight-bold">Jolita Svidraitė</div>
                     <div class="text-size-medium">Baleto ir Šiuolaikinio Šokio Mokytoja</div>
                   </div>
@@ -343,7 +343,7 @@ margin: 0rem !important;
             <div class="padding-section-large">
               <div class="contact2_component">
                 <div id="contact2-form" class="contact2_form-wrapper w-form">
-                  <form id="wf-form-Contact2-form" name="wf-form-Contact2-form" data-name="Contact2 form" method="get" class="contact2_form" data-wf-page-id="66eec62f2fa59c2dc1325447" data-wf-element-id="35eac5d9-e004-89ae-801b-a55d5194c658" netlify>
+                  <form id="wf-form-Contact2-form" name="wf-form-Contact2-form" data-name="Contact2 form" method="get" class="contact2_form" data-wf-page-id="66eec62f2fa59c2dc1325447" data-wf-element-id="35eac5d9-e004-89ae-801b-a55d5194c658">
                     <div class="form_field-wrapper"><label for="Contact2-name-2" class="form_label">Vardas</label><input class="form_input w-input" maxlength="256" name="Contact2-name-2" data-name="Contact 2 Name 2" placeholder="Jūsų vardas" type="text" id="Contact2-name-2" required=""></div>
                     <div class="form_field-wrapper"><label for="Contact2-email-2" class="form_label">El. paštas</label><input class="form_input w-input" maxlength="256" name="Contact2-email-2" data-name="Contact 2 Email 2" placeholder="Jūsų el.paštas" type="email" id="Contact2-email-2" required=""></div>
                     <div id="w-node-b2b02b6a-9b5c-1f0b-e333-f4c510ff9e6d-c1325447" class="form_field-wrapper"><label for="Contact2-email-3" class="form_label">Telefono numeris</label><input class="form_input w-input" maxlength="256" name="Contact2-email-2" data-name="Contact 2 Email 2" placeholder="Jūsų el.paštas" type="email" id="Contact2-email-2" required=""></div>
