--- a/index.html
+++ b/index.html
@@ -4,10 +4,10 @@
   <meta charset="utf-8">
   <title>Client First Wireframe 2</title>
   <meta content="Light and clean wireframe UI kit that&#x27;s based on GitHub’s Primer design system, built using the Client-first system for Webflow. It consists of 45 components." name="description">
-  <meta content="Client First Wireframe 2" property="og:title">
+  <meta content="Kunu Studio" property="og:title">
   <meta content="Light and clean wireframe UI kit that&#x27;s based on GitHub’s Primer design system, built using the Client-first system for Webflow. It consists of 45 components." property="og:description">
   <meta content="https://uploads-ssl.webflow.com/60c86f5662eab40b8f83a096/6114c29112c8d77248fd31d3_og_wireframe-2.jpg" property="og:image">
-  <meta content="Client First Wireframe 2" property="twitter:title">
+  <meta content="Kunu Studio" property="twitter:title">
   <meta content="Light and clean wireframe UI kit that&#x27;s based on GitHub’s Primer design system, built using the Client-first system for Webflow. It consists of 45 components." property="twitter:description">
   <meta content="https://uploads-ssl.webflow.com/60c86f5662eab40b8f83a096/6114c29112c8d77248fd31d3_og_wireframe-2.jpg" property="twitter:image">
   <meta property="og:type" content="website">
@@ -343,7 +343,7 @@ margin: 0rem !important;
             <div class="padding-section-large">
               <div class="contact2_component">
                 <div id="contact2-form" class="contact2_form-wrapper w-form">
-                  <form id="wf-form-Contact2-form" name="wf-form-Contact2-form" data-name="Contact2 form" method="get" class="contact2_form" data-wf-page-id="66eec62f2fa59c2dc1325447" data-wf-element-id="35eac5d9-e004-89ae-801b-a55d5194c658">
+                  <form id="wf-form-Contact2-form" name="wf-form-Contact2-form" data-name="Contact2 form" method="get" class="contact2_form" data-wf-page-id="66eec62f2fa59c2dc1325447" data-wf-element-id="35eac5d9-e004-89ae-801b-a55d5194c658" netlify>
                     <div class="form_field-wrapper"><label for="Contact2-name-2" class="form_label">Vardas</label><input class="form_input w-input" maxlength="256" name="Contact2-name-2" data-name="Contact 2 Name 2" placeholder="Jūsų vardas" type="text" id="Contact2-name-2" required=""></div>
                     <div class="form_field-wrapper"><label for="Contact2-email-2" class="form_label">El. paštas</label><input class="form_input w-input" maxlength="256" name="Contact2-email-2" data-name="Contact 2 Email 2" placeholder="Jūsų el.paštas" type="email" id="Contact2-email-2" required=""></div>
                     <div id="w-node-b2b02b6a-9b5c-1f0b-e333-f4c510ff9e6d-c1325447" class="form_field-wrapper"><label for="Contact2-email-3" class="form_label">Telefono numeris</label><input class="form_input w-input" maxlength="256" name="Contact2-email-2" data-name="Contact 2 Email 2" placeholder="Jūsų el.paštas" type="email" id="Contact2-email-2" required=""></div>
