--- a/index.html
+++ b/index.html
@@ -2,14 +2,14 @@
 <html data-wf-page="66eec62f2fa59c2dc1325447" data-wf-site="66eec62f2fa59c2dc13253bb" lang="en">
 <head>
   <meta charset="utf-8">
-  <title>Client First Wireframe 2</title>
+  <title>Kunu Studio</title>
   <meta content="Light and clean wireframe UI kit that&#x27;s based on GitHub’s Primer design system, built using the Client-first system for Webflow. It consists of 45 components." name="description">
   <meta content="Kunu Studio" property="og:title">
-  <meta content="Light and clean wireframe UI kit that&#x27;s based on GitHub’s Primer design system, built using the Client-first system for Webflow. It consists of 45 components." property="og:description">
-  <meta content="https://uploads-ssl.webflow.com/60c86f5662eab40b8f83a096/6114c29112c8d77248fd31d3_og_wireframe-2.jpg" property="og:image">
+  <meta content="Kunu Studio - Siuolaikinio Sokio Studija Vilniuje." property="og:description">
+  <meta content="https://cdn.prod.website-files.com/66eec62f2fa59c2dc13253bb/66ef0503437bd4e8eab647e7_456967253_122100798206495936_2476309423794841411_n.jpg" property="og:image">
   <meta content="Kunu Studio" property="twitter:title">
-  <meta content="Light and clean wireframe UI kit that&#x27;s based on GitHub’s Primer design system, built using the Client-first system for Webflow. It consists of 45 components." property="twitter:description">
-  <meta content="https://uploads-ssl.webflow.com/60c86f5662eab40b8f83a096/6114c29112c8d77248fd31d3_og_wireframe-2.jpg" property="twitter:image">
+  <meta content="Kunu Studio - Siuolaikinio Sokio Studija Vilniuje." property="twitter:description">
+  <meta content="https://cdn.prod.website-files.com/66eec62f2fa59c2dc13253bb/66ef0503437bd4e8eab647e7_456967253_122100798206495936_2476309423794841411_n.jpg" property="twitter:image">
   <meta property="og:type" content="website">
   <meta content="summary_large_image" name="twitter:card">
   <meta content="width=device-width, initial-scale=1" name="viewport">
@@ -22,7 +22,7 @@
   <script src="https://ajax.googleapis.com/ajax/libs/webfont/1.6.26/webfont.js" type="text/javascript"></script>
   <script type="text/javascript">WebFont.load({  google: {    families: ["Droid Serif:400,400italic,700,700italic","Merriweather:300,300italic,400,400italic,700,700italic,900,900italic","PT Serif:400,400italic,700,700italic","Inter:300,regular,500,600,700,800"]  }});</script>
   <script type="text/javascript">!function(o,c){var n=c.documentElement,t=" w-mod-";n.className+=t+"js",("ontouchstart"in o||o.DocumentTouch&&c instanceof DocumentTouch)&&(n.className+=t+"touch")}(window,document);</script>
-  <link href="images/favicon.png" rel="shortcut icon" type="image/x-icon">
+  <link href="https://cdn.prod.website-files.com/66eec62f2fa59c2dc13253bb/66ef05078012c70c2c8b5458_favicon.png" rel="shortcut icon" type="image/x-icon">
   <link href="images/webclip.png" rel="apple-touch-icon">
   <style>
 * {
