--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html><!--  Last Published: Sat Sep 21 2024 17:54:18 GMT+0000 (Coordinated Universal Time)  -->
+<!DOCTYPE html><!--  Last Published: Sat Sep 21 2024 18:16:29 GMT+0000 (Coordinated Universal Time)  -->
 <html data-wf-page="66eec62f2fa59c2dc1325447" data-wf-site="66eec62f2fa59c2dc13253bb" lang="lt">
 <head>
   <meta charset="utf-8">
@@ -209,7 +209,7 @@ margin: 0rem !important;
     </div>
     <div data-collapse="medium" data-animation="default" data-duration="400" data-easing="ease-out" data-easing2="ease-in" role="banner" class="nav-primary_component w-nav">
       <div class="nav-primary_container">
-        <a href="https://www.finsweet.com/" target="_blank" class="nav-primary_logo-link w-nav-brand"><img src="images/Screenshot-2024-09-21-at-18.21.37.jpg" loading="lazy" sizes="100vw" srcset="images/Screenshot-2024-09-21-at-18.21.37-p-500.jpg 500w, images/Screenshot-2024-09-21-at-18.21.37-p-800.jpg 800w, images/Screenshot-2024-09-21-at-18.21.37.jpg 913w" alt="" class="nav-primary_logo"></a>
+        <a href="https://www.finsweet.com/" target="_blank" class="nav-primary_logo-link w-nav-brand"><img src="images/Screenshot-2024-09-21-at-18.21.37.jpg" loading="lazy" sizes="(max-width: 479px) 91vw, 434.75px" srcset="images/Screenshot-2024-09-21-at-18.21.37-p-500.jpg 500w, images/Screenshot-2024-09-21-at-18.21.37-p-800.jpg 800w, images/Screenshot-2024-09-21-at-18.21.37.jpg 913w" alt="" class="nav-primary_logo"></a>
         <nav role="navigation" class="nav-primary_menu hide w-nav-menu">
           <div data-hover="false" data-delay="0" class="nav-primary_dropdown w-dropdown">
             <div class="nav-primary_dropdown_toggle hide w-dropdown-toggle">
@@ -349,11 +349,11 @@ margin: 0rem !important;
             <div class="padding-section-large">
               <div class="contact2_component">
                 <div id="contact2-form" class="contact2_form-wrapper w-form">
-                  <form id="wf-form-Contact2-form" name="wf-form-Contact2-form" data-name="Contact2 form" method="get" class="contact2_form" data-wf-page-id="66eec62f2fa59c2dc1325447" data-wf-element-id="35eac5d9-e004-89ae-801b-a55d5194c658" netlify>
+                  <form id="wf-form-Contact2-form" name="wf-form-Contact2-form" data-name="Contact2 form" redirect="https://kunu.studio/aciu" data-redirect="https://kunu.studio/aciu" method="get" class="contact2_form" data-wf-page-id="66eec62f2fa59c2dc1325447" data-wf-element-id="35eac5d9-e004-89ae-801b-a55d5194c658">
                     <div class="form_field-wrapper"><label for="Contact2-name-2" class="form_label">Vardas*</label><input class="form_input w-input" maxlength="256" name="Contact2-name-2" data-name="Contact 2 Name 2" placeholder="Jūsų vardas" type="text" id="Contact2-name-2" required=""></div>
                     <div class="form_field-wrapper"><label for="Contact2-email-2" class="form_label">El. paštas*</label><input class="form_input w-input" maxlength="256" name="Contact2-email-2" data-name="Contact 2 Email 2" placeholder="Jūsų el.paštas" type="email" id="Contact2-email-2" required=""></div>
-                    <div id="w-node-b2b02b6a-9b5c-1f0b-e333-f4c510ff9e6d-c1325447" class="form_field-wrapper"><label for="Contact2-email-3" class="form_label">Telefono numeris</label><input class="form_input w-input" maxlength="256" name="Contact2-email-2" data-name="Contact 2 Email 2" placeholder="Jūsų el.paštas" type="text" id="Contact2-email-2"></div>
-                    <div class="form_field-wrapper"><label for="Contact2-message-2" class="form_label">Žinutė*</label><textarea placeholder="Jūsų žinutė" maxlength="5000" id="Contact2-message-2" name="Contact2-message-2" required="" data-name="Contact 2 Message 2" class="form_input input-area w-input"></textarea></div>
+                    <div id="w-node-b2b02b6a-9b5c-1f0b-e333-f4c510ff9e6d-c1325447" class="form_field-wrapper"><label for="Contact2-email-2" class="form_label">Telefono numeris</label><input class="form_input w-input" maxlength="256" name="Contact2-email-2" data-name="Contact 2 Email 2" placeholder="Jūsų el.paštas" type="text" id="Contact2-email-2"></div>
+                    <div class="form_field-wrapper"><label for="Contact2-message-2" class="form_label">Žinutė*</label><textarea id="Contact2-message-2" name="Contact2-message-2" maxlength="5000" data-name="Contact 2 Message 2" placeholder="Jūsų žinutė" required="" class="form_input input-area w-input"></textarea></div>
                     <div class="padding-bottom padding-xsmall"></div><input type="submit" data-wait="Please wait..." id="w-node-_35eac5d9-e004-89ae-801b-a55d5194c66e-c1325447" class="button w-button" value="Siųsti">
                   </form>
                   <div class="form_message-success w-form-done">
