--- a/wireframe/cms.html
+++ b/wireframe/cms.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html><!--  Last Published: Sat Sep 21 2024 17:54:18 GMT+0000 (Coordinated Universal Time)  -->
+<!DOCTYPE html><!--  Last Published: Sat Sep 21 2024 18:16:29 GMT+0000 (Coordinated Universal Time)  -->
 <html data-wf-page="66eec62f2fa59c2dc132544a" data-wf-site="66eec62f2fa59c2dc13253bb" lang="lt">
 <head>
   <meta charset="utf-8">
@@ -196,7 +196,7 @@ margin: 0rem !important;
     </div>
     <div data-collapse="medium" data-animation="default" data-duration="400" data-easing="ease-out" data-easing2="ease-in" role="banner" class="nav-primary_component w-nav">
       <div class="nav-primary_container">
-        <a href="https://www.finsweet.com/" target="_blank" class="nav-primary_logo-link w-nav-brand"><img src="../images/Screenshot-2024-09-21-at-18.21.37.jpg" loading="lazy" sizes="100vw" srcset="../images/Screenshot-2024-09-21-at-18.21.37-p-500.jpg 500w, ../images/Screenshot-2024-09-21-at-18.21.37-p-800.jpg 800w, ../images/Screenshot-2024-09-21-at-18.21.37.jpg 913w" alt="" class="nav-primary_logo"></a>
+        <a href="https://www.finsweet.com/" target="_blank" class="nav-primary_logo-link w-nav-brand"><img src="../images/Screenshot-2024-09-21-at-18.21.37.jpg" loading="lazy" sizes="(max-width: 479px) 91vw, 434.75px" srcset="../images/Screenshot-2024-09-21-at-18.21.37-p-500.jpg 500w, ../images/Screenshot-2024-09-21-at-18.21.37-p-800.jpg 800w, ../images/Screenshot-2024-09-21-at-18.21.37.jpg 913w" alt="" class="nav-primary_logo"></a>
         <nav role="navigation" class="nav-primary_menu hide w-nav-menu">
           <div data-hover="false" data-delay="0" class="nav-primary_dropdown w-dropdown">
             <div class="nav-primary_dropdown_toggle hide w-dropdown-toggle">
