--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html><!--  Last Published: Sat Sep 21 2024 18:16:29 GMT+0000 (Coordinated Universal Time)  -->
+<!DOCTYPE html><!--  Last Published: Sat Sep 21 2024 18:30:39 GMT+0000 (Coordinated Universal Time)  -->
 <html data-wf-page="66eec62f2fa59c2dc1325447" data-wf-site="66eec62f2fa59c2dc13253bb" lang="lt">
 <head>
   <meta charset="utf-8">
@@ -348,12 +348,12 @@ margin: 0rem !important;
           <div class="container-medium">
             <div class="padding-section-large">
               <div class="contact2_component">
-                <div id="contact2-form" class="contact2_form-wrapper w-form">
-                  <form id="wf-form-Contact2-form" name="wf-form-Contact2-form" data-name="Contact2 form" redirect="https://kunu.studio/aciu" data-redirect="https://kunu.studio/aciu" method="get" class="contact2_form" data-wf-page-id="66eec62f2fa59c2dc1325447" data-wf-element-id="35eac5d9-e004-89ae-801b-a55d5194c658" netlify>
-                    <div class="form_field-wrapper"><label for="Contact2-name-2" class="form_label">Vardas*</label><input class="form_input w-input" maxlength="256" name="Contact2-name-2" data-name="Contact 2 Name 2" placeholder="Jūsų vardas" type="text" id="Contact2-name-2" required=""></div>
-                    <div class="form_field-wrapper"><label for="Contact2-email-2" class="form_label">El. paštas*</label><input class="form_input w-input" maxlength="256" name="Contact2-email-2" data-name="Contact 2 Email 2" placeholder="Jūsų el.paštas" type="email" id="Contact2-email-2" required=""></div>
-                    <div id="w-node-b2b02b6a-9b5c-1f0b-e333-f4c510ff9e6d-c1325447" class="form_field-wrapper"><label for="Contact2-email-2" class="form_label">Telefono numeris</label><input class="form_input w-input" maxlength="256" name="Contact2-email-2" data-name="Contact 2 Email 2" placeholder="Jūsų telefono numeris" type="text" id="Contact2-email-2"></div>
-                    <div class="form_field-wrapper"><label for="Contact2-message-2" class="form_label">Žinutė*</label><textarea id="Contact2-message-2" name="Contact2-message-2" maxlength="5000" data-name="Contact 2 Message 2" placeholder="Jūsų žinutė" required="" class="form_input input-area w-input"></textarea></div>
+                <div id="contact2-form" data-netlify="true" class="contact2_form-wrapper w-form">
+                  <form id="wf-form-Form" name="wf-form-Form" data-name="Form" method="post" class="contact2_form" data-wf-page-id="66eec62f2fa59c2dc1325447" data-wf-element-id="35eac5d9-e004-89ae-801b-a55d5194c658">
+                    <div class="form_field-wrapper"><label for="Name" class="form_label">Vardas*</label><input class="form_input w-input" maxlength="256" name="Name" data-name="Name" placeholder="Jūsų vardas" type="text" id="Name" required=""></div>
+                    <div class="form_field-wrapper"><label for="Email" class="form_label">El. paštas*</label><input class="form_input w-input" maxlength="256" name="Email" data-name="Email" placeholder="Jūsų el.paštas" type="email" id="Email" required=""></div>
+                    <div id="w-node-b2b02b6a-9b5c-1f0b-e333-f4c510ff9e6d-c1325447" class="form_field-wrapper"><label for="Telefonas" class="form_label">Telefono numeris</label><input class="form_input w-input" maxlength="256" name="Telefonas" data-name="Telefonas" placeholder="Jūsų telefonas" type="text" id="Telefonas"></div>
+                    <div class="form_field-wrapper"><label for="Zinute" class="form_label">Žinutė*</label><textarea id="Zinute" name="Zinute" maxlength="5000" data-name="Zinute" placeholder="Jūsų žinutė" required="" class="form_input input-area w-input"></textarea></div>
                     <div class="padding-bottom padding-xsmall"></div><input type="submit" data-wait="Please wait..." id="w-node-_35eac5d9-e004-89ae-801b-a55d5194c66e-c1325447" class="button w-button" value="Siųsti">
                   </form>
                   <div class="form_message-success w-form-done">
@@ -364,7 +364,7 @@ margin: 0rem !important;
                           </svg></div>
                       </div>
                       <div class="margin-left margin-small">
-                        <div>Awesome, your message has been sent!</div>
+                        <div>Ačiū, gavome Jūsų žinutę.</div>
                       </div>
                     </div>
                   </div>
@@ -376,7 +376,7 @@ margin: 0rem !important;
                           </svg></div>
                       </div>
                       <div class="margin-left margin-small">
-                        <div>Error! Please try again.</div>
+                        <div>Nepavyko, pabandykite dar karta.</div>
                       </div>
                     </div>
                   </div>
