--- a/index.html
+++ b/index.html
@@ -349,7 +349,7 @@ margin: 0rem !important;
             <div class="padding-section-large">
               <div class="contact2_component">
                 <div id="contact2-form" data-netlify="true" class="contact2_form-wrapper w-form">
-                  <form id="wf-form-Form" name="wf-form-Form" data-name="Form" redirect="https://kunu.studio/aciu" data-redirect="https://kunu.studio/aciu" action="/aciu" method="post" class="contact2_form" data-wf-page-id="66eec62f2fa59c2dc1325447" data-wf-element-id="35eac5d9-e004-89ae-801b-a55d5194c658">
+                  <form id="wf-form-Form" name="wf-form-Form" data-netlify="true" data-name="Form" redirect="https://kunu.studio/aciu" data-redirect="https://kunu.studio/aciu" action="/aciu" method="post" class="contact2_form" data-wf-page-id="66eec62f2fa59c2dc1325447" data-wf-element-id="35eac5d9-e004-89ae-801b-a55d5194c658">
                     <div class="form_field-wrapper"><label for="Name" class="form_label">Vardas*</label><input class="form_input w-input" maxlength="256" name="Name" data-name="Name" placeholder="Jūsų vardas" type="text" id="Name" required=""></div>
                     <div class="form_field-wrapper"><label for="Email" class="form_label">El. paštas*</label><input class="form_input w-input" maxlength="256" name="Email" data-name="Email" placeholder="Jūsų el.paštas" type="email" id="Email" required=""></div>
                     <div id="w-node-b2b02b6a-9b5c-1f0b-e333-f4c510ff9e6d-c1325447" class="form_field-wrapper"><label for="Telefonas" class="form_label">Telefono numeris</label><input class="form_input w-input" maxlength="256" name="Telefonas" data-name="Telefonas" placeholder="Jūsų telefonas" type="text" id="Telefonas"></div>
