--- a/index.html
+++ b/index.html
@@ -209,7 +209,7 @@ margin: 0rem !important;
     </div>
     <div data-collapse="medium" data-animation="default" data-duration="400" data-easing="ease-out" data-easing2="ease-in" role="banner" class="nav-primary_component w-nav">
       <div class="nav-primary_container">
-        <a href="https://www.finsweet.com/" target="_blank" class="nav-primary_logo-link w-nav-brand"><img src="images/Screenshot-2024-09-21-at-18.21.37.jpg" loading="lazy" sizes="(max-width: 479px) 91vw, 434.75px" srcset="images/Screenshot-2024-09-21-at-18.21.37-p-500.jpg 500w, images/Screenshot-2024-09-21-at-18.21.37-p-800.jpg 800w, images/Screenshot-2024-09-21-at-18.21.37.jpg 913w" alt="" class="nav-primary_logo"></a>
+        <a href="https://www.kunu.studio/" target="_blank" class="nav-primary_logo-link w-nav-brand"><img src="images/Screenshot-2024-09-21-at-18.21.37.jpg" loading="lazy" sizes="(max-width: 479px) 91vw, 434.75px" srcset="images/Screenshot-2024-09-21-at-18.21.37-p-500.jpg 500w, images/Screenshot-2024-09-21-at-18.21.37-p-800.jpg 800w, images/Screenshot-2024-09-21-at-18.21.37.jpg 913w" alt="" class="nav-primary_logo"></a>
         <nav role="navigation" class="nav-primary_menu hide w-nav-menu">
           <div data-hover="false" data-delay="0" class="nav-primary_dropdown w-dropdown">
             <div class="nav-primary_dropdown_toggle hide w-dropdown-toggle">
@@ -228,12 +228,6 @@ margin: 0rem !important;
           <a href="index.html" aria-current="page" class="nav-primary_link w-inline-block w--current">
             <div>Home</div>
           </a>
-          <a href="https://www.finsweet.com/client-first/" target="_blank" class="nav-primary_link w-inline-block">
-            <div>Learn Client-First</div>
-          </a>
-          <div class="nav-primary_button-wrapper">
-            <a href="https://finsweet.info/client-first-wireframe-2" target="_blank" class="button w-button">REGISTRACIJA</a>
-          </div>
         </nav>
         <div class="nav-primary_menu_button hide w-nav-button">
           <div class="nav-primary_menu_icon w-icon-nav-menu"></div>
