--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html><!--  Last Published: Sat Sep 21 2024 18:35:55 GMT+0000 (Coordinated Universal Time)  -->
+<!DOCTYPE html><!--  Last Published: Sat Sep 21 2024 19:28:58 GMT+0000 (Coordinated Universal Time)  -->
 <html data-wf-page="66eec62f2fa59c2dc1325447" data-wf-site="66eec62f2fa59c2dc13253bb" lang="lt">
 <head>
   <meta charset="utf-8">
@@ -209,7 +209,7 @@ margin: 0rem !important;
     </div>
     <div data-collapse="medium" data-animation="default" data-duration="400" data-easing="ease-out" data-easing2="ease-in" role="banner" class="nav-primary_component w-nav">
       <div class="nav-primary_container">
-        <a href="https://www.kunu.studio/" target="_blank" class="nav-primary_logo-link w-nav-brand"><img src="images/Screenshot-2024-09-21-at-18.21.37.jpg" loading="lazy" sizes="(max-width: 479px) 91vw, 434.75px" srcset="images/Screenshot-2024-09-21-at-18.21.37-p-500.jpg 500w, images/Screenshot-2024-09-21-at-18.21.37-p-800.jpg 800w, images/Screenshot-2024-09-21-at-18.21.37.jpg 913w" alt="" class="nav-primary_logo"></a>
+        <a href="index.html" aria-current="page" class="nav-primary_logo-link w-nav-brand w--current"><img src="images/Screenshot-2024-09-21-at-18.21.37.jpg" loading="lazy" sizes="(max-width: 479px) 91vw, 434.75px" srcset="images/Screenshot-2024-09-21-at-18.21.37-p-500.jpg 500w, images/Screenshot-2024-09-21-at-18.21.37-p-800.jpg 800w, images/Screenshot-2024-09-21-at-18.21.37.jpg 913w" alt="" class="nav-primary_logo"></a>
         <nav role="navigation" class="nav-primary_menu hide w-nav-menu">
           <div data-hover="false" data-delay="0" class="nav-primary_dropdown w-dropdown">
             <div class="nav-primary_dropdown_toggle hide w-dropdown-toggle">
@@ -225,9 +225,9 @@ margin: 0rem !important;
               <a href="wireframe/style-guide.html" class="nav-primary_dropdown_link w-dropdown-link">Styleguide</a>
             </nav>
           </div>
-          <a href="index.html" aria-current="page" class="nav-primary_link w-inline-block w--current">
-            <div>Home</div>
-          </a>
+          <div class="nav-primary_button-wrapper">
+            <a href="index.html" aria-current="page" class="button w-button w--current">REGISTRACIJA</a>
+          </div>
         </nav>
         <div class="nav-primary_menu_button hide w-nav-button">
           <div class="nav-primary_menu_icon w-icon-nav-menu"></div>
@@ -236,7 +236,7 @@ margin: 0rem !important;
     </div>
     <main class="main-wrapper">
       <section class="section_layout5">
-        <div class="layout5_component">
+        <div class="hero_bg">
           <div class="layout5_background">
             <div class="padding-global">
               <div class="home_box">
@@ -324,7 +324,7 @@ margin: 0rem !important;
                   <div id="w-node-_41268abb-cf82-c19f-2fd1-2b651b2e5e60-c1325447" class="team4_item">
                     <div class="team4_image-wrapper"><img src="images/Screenshot-2024-09-21-at-20.27.50.jpg" loading="lazy" sizes="(max-width: 479px) 92vw, (max-width: 767px) 46vw, (max-width: 991px) 44vw, 21vw" srcset="images/Screenshot-2024-09-21-at-20.27.50-p-500.jpg 500w, images/Screenshot-2024-09-21-at-20.27.50.jpg 658w" alt="" class="team4_image"></div>
                     <div class="text-size-medium text-weight-bold">Eglė Kraujalė</div>
-                    <div class="text-size-medium">Šokio Judesio Praktika</div>
+                    <div class="text-size-medium">Šokio Judesio Praktikos Mokytoja</div>
                   </div>
                   <div id="w-node-_98b64e2b-59bc-2655-73cc-f23305f7c3fb-c1325447" class="team4_item">
                     <div class="team4_image-wrapper"><img src="images/Screenshot-2024-09-21-at-18.59.42.jpg" loading="lazy" sizes="(max-width: 479px) 92vw, (max-width: 767px) 46vw, (max-width: 991px) 44vw, 21vw" srcset="images/Screenshot-2024-09-21-at-18.59.42-p-500.jpg 500w, images/Screenshot-2024-09-21-at-18.59.42.jpg 591w" alt="" class="team4_image"></div>
@@ -342,8 +342,8 @@ margin: 0rem !important;
           <div class="container-medium">
             <div class="padding-section-large">
               <div class="contact2_component">
-                <div id="contact2-form" data-netlify="true" class="contact2_form-wrapper w-form">
-                  <form id="wf-form-Form" name="wf-form-Form" data-netlify="true" data-name="Form" redirect="https://kunu.studio/aciu" data-redirect="https://kunu.studio/aciu" action="/aciu" method="post" class="contact2_form" data-wf-page-id="66eec62f2fa59c2dc1325447" data-wf-element-id="35eac5d9-e004-89ae-801b-a55d5194c658">
+                <div id="contact2-form" class="contact2_form-wrapper w-form">
+                  <form method="post" class="contact2_form" data-netlify="true" name="wf-form-Form" data-name="Form" action="/aciu" id="wf-form-Form" redirect="https://kunu.studio/aciu" data-redirect="https://kunu.studio/aciu" data-wf-page-id="66eec62f2fa59c2dc1325447" data-wf-element-id="35eac5d9-e004-89ae-801b-a55d5194c658">
                     <div class="form_field-wrapper"><label for="Name" class="form_label">Vardas*</label><input class="form_input w-input" maxlength="256" name="Name" data-name="Name" placeholder="Jūsų vardas" type="text" id="Name" required=""></div>
                     <div class="form_field-wrapper"><label for="Email" class="form_label">El. paštas*</label><input class="form_input w-input" maxlength="256" name="Email" data-name="Email" placeholder="Jūsų el.paštas" type="email" id="Email" required=""></div>
                     <div id="w-node-b2b02b6a-9b5c-1f0b-e333-f4c510ff9e6d-c1325447" class="form_field-wrapper"><label for="Telefonas" class="form_label">Telefono numeris</label><input class="form_input w-input" maxlength="256" name="Telefonas" data-name="Telefonas" placeholder="Jūsų telefonas" type="text" id="Telefonas"></div>
@@ -394,7 +394,7 @@ margin: 0rem !important;
                           <path d="M12 0C8.74 0 8.333.015 7.053.072 5.775.132 4.905.333 4.14.63c-.789.306-1.459.717-2.126 1.384S.935 3.35.63 4.14C.333 4.905.131 5.775.072 7.053.012 8.333 0 8.74 0 12s.015 3.667.072 4.947c.06 1.277.261 2.148.558 2.913.306.788.717 1.459 1.384 2.126.667.666 1.336 1.079 2.126 1.384.766.296 1.636.499 2.913.558C8.333 23.988 8.74 24 12 24s3.667-.015 4.947-.072c1.277-.06 2.148-.262 2.913-.558.788-.306 1.459-.718 2.126-1.384.666-.667 1.079-1.335 1.384-2.126.296-.765.499-1.636.558-2.913.06-1.28.072-1.687.072-4.947s-.015-3.667-.072-4.947c-.06-1.277-.262-2.149-.558-2.913-.306-.789-.718-1.459-1.384-2.126C21.319 1.347 20.651.935 19.86.63c-.765-.297-1.636-.499-2.913-.558C15.667.012 15.26 0 12 0zm0 2.16c3.203 0 3.585.016 4.85.071 1.17.055 1.805.249 2.227.415.562.217.96.477 1.382.896.419.42.679.819.896 1.381.164.422.36 1.057.413 2.227.057 1.266.07 1.646.07 4.85s-.015 3.585-.074 4.85c-.061 1.17-.256 1.805-.421 2.227-.224.562-.479.96-.899 1.382-.419.419-.824.679-1.38.896-.42.164-1.065.36-2.235.413-1.274.057-1.649.07-4.859.07-3.211 0-3.586-.015-4.859-.074-1.171-.061-1.816-.256-2.236-.421-.569-.224-.96-.479-1.379-.899-.421-.419-.69-.824-.9-1.38-.165-.42-.359-1.065-.42-2.235-.045-1.26-.061-1.649-.061-4.844 0-3.196.016-3.586.061-4.861.061-1.17.255-1.814.42-2.234.21-.57.479-.96.9-1.381.419-.419.81-.689 1.379-.898.42-.166 1.051-.361 2.221-.421 1.275-.045 1.65-.06 4.859-.06l.045.03zm0 3.678c-3.405 0-6.162 2.76-6.162 6.162 0 3.405 2.76 6.162 6.162 6.162 3.405 0 6.162-2.76 6.162-6.162 0-3.405-2.76-6.162-6.162-6.162zM12 16c-2.21 0-4-1.79-4-4s1.79-4 4-4 4 1.79 4 4-1.79 4-4 4zm7.846-10.405c0 .795-.646 1.44-1.44 1.44-.795 0-1.44-.646-1.44-1.44 0-.794.646-1.439 1.44-1.439.793-.001 1.44.645 1.44 1.439z"></path>
                         </svg></div>
                     </a>
-                    <a aria-label="Facebook" href="https://www.facebook.com/profile.php?id=61564878094168" target="_blank" class="social_link w-inline-block">
+                    <a aria-label="Facebook" href="https://www.facebook.com/kunustudio.vilnius" target="_blank" class="social_link w-inline-block">
                       <div class="social_icon w-embed"><svg aria-hidden="true" height="100%" viewbox="0 0 16 16" fill="none" xmlns="http://www.w3.org/2000/svg">
                           <path fill-rule="evenodd" clip-rule="evenodd" d="M8 0C3.58172 0 0 3.58172 0 8C0 11.993 2.92546 15.3028 6.75 15.9029V10.3125H4.71875V8H6.75V6.2375C6.75 4.23281 7.94375 3.125 9.77188 3.125C10.6469 3.125 11.5625 3.28125 11.5625 3.28125V5.25H10.5531C9.55938 5.25 9.25 5.86719 9.25 6.5V8H11.4688L11.1141 10.3125H9.25V15.9029C13.0745 15.3028 16 11.993 16 8C16 3.58172 12.4183 0 8 0Z" fill="currentColor"></path>
                         </svg></div>
@@ -420,7 +420,7 @@ margin: 0rem !important;
                       <path d="M12 0C8.74 0 8.333.015 7.053.072 5.775.132 4.905.333 4.14.63c-.789.306-1.459.717-2.126 1.384S.935 3.35.63 4.14C.333 4.905.131 5.775.072 7.053.012 8.333 0 8.74 0 12s.015 3.667.072 4.947c.06 1.277.261 2.148.558 2.913.306.788.717 1.459 1.384 2.126.667.666 1.336 1.079 2.126 1.384.766.296 1.636.499 2.913.558C8.333 23.988 8.74 24 12 24s3.667-.015 4.947-.072c1.277-.06 2.148-.262 2.913-.558.788-.306 1.459-.718 2.126-1.384.666-.667 1.079-1.335 1.384-2.126.296-.765.499-1.636.558-2.913.06-1.28.072-1.687.072-4.947s-.015-3.667-.072-4.947c-.06-1.277-.262-2.149-.558-2.913-.306-.789-.718-1.459-1.384-2.126C21.319 1.347 20.651.935 19.86.63c-.765-.297-1.636-.499-2.913-.558C15.667.012 15.26 0 12 0zm0 2.16c3.203 0 3.585.016 4.85.071 1.17.055 1.805.249 2.227.415.562.217.96.477 1.382.896.419.42.679.819.896 1.381.164.422.36 1.057.413 2.227.057 1.266.07 1.646.07 4.85s-.015 3.585-.074 4.85c-.061 1.17-.256 1.805-.421 2.227-.224.562-.479.96-.899 1.382-.419.419-.824.679-1.38.896-.42.164-1.065.36-2.235.413-1.274.057-1.649.07-4.859.07-3.211 0-3.586-.015-4.859-.074-1.171-.061-1.816-.256-2.236-.421-.569-.224-.96-.479-1.379-.899-.421-.419-.69-.824-.9-1.38-.165-.42-.359-1.065-.42-2.235-.045-1.26-.061-1.649-.061-4.844 0-3.196.016-3.586.061-4.861.061-1.17.255-1.814.42-2.234.21-.57.479-.96.9-1.381.419-.419.81-.689 1.379-.898.42-.166 1.051-.361 2.221-.421 1.275-.045 1.65-.06 4.859-.06l.045.03zm0 3.678c-3.405 0-6.162 2.76-6.162 6.162 0 3.405 2.76 6.162 6.162 6.162 3.405 0 6.162-2.76 6.162-6.162 0-3.405-2.76-6.162-6.162-6.162zM12 16c-2.21 0-4-1.79-4-4s1.79-4 4-4 4 1.79 4 4-1.79 4-4 4zm7.846-10.405c0 .795-.646 1.44-1.44 1.44-.795 0-1.44-.646-1.44-1.44 0-.794.646-1.439 1.44-1.439.793-.001 1.44.645 1.44 1.439z"></path>
                     </svg></div>
                 </a>
-                <a aria-label="Facebook" href="https://www.facebook.com/profile.php?id=61564878094168" class="social_link w-inline-block">
+                <a aria-label="Facebook" href="https://www.facebook.com/kunustudio.vilnius" class="social_link w-inline-block">
                   <div class="social_icon w-embed"><svg aria-hidden="true" height="100%" viewbox="0 0 16 16" fill="none" xmlns="http://www.w3.org/2000/svg">
                       <path fill-rule="evenodd" clip-rule="evenodd" d="M8 0C3.58172 0 0 3.58172 0 8C0 11.993 2.92546 15.3028 6.75 15.9029V10.3125H4.71875V8H6.75V6.2375C6.75 4.23281 7.94375 3.125 9.77188 3.125C10.6469 3.125 11.5625 3.28125 11.5625 3.28125V5.25H10.5531C9.55938 5.25 9.25 5.86719 9.25 6.5V8H11.4688L11.1141 10.3125H9.25V15.9029C13.0745 15.3028 16 11.993 16 8C16 3.58172 12.4183 0 8 0Z" fill="currentColor"></path>
                     </svg></div>
