--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
   <meta property="og:type" content="website">
   <meta content="summary_large_image" name="twitter:card">
   <meta content="width=device-width, initial-scale=1" name="viewport">
+  <meta name="ahrefs-site-verification" content="80d35b5d188f25544498ffeb0847c8dc06d8c8e27c9174a9a8b1cdc22db32024">
   <link href="css/normalize.css" rel="stylesheet" type="text/css">
   <link href="css/webflow.css" rel="stylesheet" type="text/css">
   <link href="css/kunu-studio.webflow.css" rel="stylesheet" type="text/css">
