--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html><!--  Last Published: Fri Oct 25 2024 09:03:30 GMT+0000 (Coordinated Universal Time)  -->
+<!DOCTYPE html><!--  Last Published: Fri Oct 25 2024 09:13:18 GMT+0000 (Coordinated Universal Time)  -->
 <html data-wf-page="66eec62f2fa59c2dc1325447" data-wf-site="66eec62f2fa59c2dc13253bb" lang="lt">
 <head>
   <meta charset="utf-8">
@@ -271,9 +271,9 @@ margin: 0rem !important;
           <div>
             <div class="padding-section-xlarge">
               <div class="container-large">
-                <h1>Šiuolaikinio Šokio ir Baleto Studija &quot;KUN/U&quot;</h1>
+                <h2>Apie &quot;KUN/U&quot;</h2>
                 <div class="padding-bottom padding-small"></div>
-                <p>Šokio ir judesio kokybė, meninis ugdymas, asmeninė šokio kalba, jos tobulinimas ir kūrybiniai horizontai.</p>
+                <p>KUN/U šokio studijos vizija sujungti kūryba su asmeniniu tobulėjimu.</p>
                 <div class="padding-bottom padding-medium"></div>
               </div>
             </div>
